--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
   "scripts": {
     "dev": "nextron",
     "build": "nextron build",
-    "postinstall": "electron-builder install-app-deps"
+    "postinstall": "electron-builder install-app-deps",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:deploy": "prisma migrate deploy",
+    "db:studio": "prisma studio --schema=./main/db/schema.prisma",
+    "db:seed": "ts-node ./main/db/seed.ts"
   },
   "dependencies": {
+    "@prisma/client": "^6.15.0",
+    "bcryptjs": "^3.0.2",
     "electron-serve": "^1.3.0",
     "electron-store": "^8.2.0"
   },
@@ -23,9 +30,14 @@
     "next": "^14.2.4",
     "nextron": "^9.5.0",
     "postcss": "^8.4.38",
+    "prisma": "^6.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.3",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
+  },
+  "prisma": {
+    "seed": "ts-node ./main/db/seed.ts"
   }
 }
