--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@prisma/client": "^6.15.0",
     "bcryptjs": "^3.0.2",
     "electron-serve": "^1.3.0",
-    "electron-store": "^8.2.0"
+    "electron-store": "^8.2.0",
+    "lucide-react": "^0.544.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
