--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "bcryptjs": "^3.0.2",
     "electron-serve": "^1.3.0",
     "electron-store": "^8.2.0",
-    "lucide-react": "^0.544.0"
+    "lucide-react": "^0.544.0",
+    "sweetalert2": "^11.23.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
