--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "dependencies": {
     "@prisma/client": "^6.15.0",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.5.0",
     "electron-serve": "^1.3.0",
     "electron-store": "^8.2.0",
     "lucide-react": "^0.544.0",
+    "react-chartjs-2": "^5.3.0",
     "sweetalert2": "^11.23.0"
   },
   "devDependencies": {
