--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "electron-serve": "^1.3.0",
     "electron-store": "^8.2.0",
     "lucide-react": "^0.544.0",
+    "node-fetch": "^2.7.0",
     "react-chartjs-2": "^5.3.0",
     "sweetalert2": "^11.23.0"
   },
